* UpdateManager/backend/InstallBackendAptdaemon.py:   - fix incorrect initialization * fix GLib.timeout_add_seconds() with the new GIR

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,13 @@
 update-manager (1:0.152.15) UNRELEASEDoneiric; urgency=low
 
+  [ Brian Murray ]
   * DistUpgrade/DistUpgradeApport.py: 
     - properly add the tag 'dist-upgrade' to the bug report
+  
+  [ Michael Vogt ]
+  * UpdateManager/backend/InstallBackendAptdaemon.py:
+    - fix incorrect initialization
+  * fix GLib.timeout_add_seconds() with the new GIR
 
  -- Brian Murray <brian@ubuntu.com>  Tue, 16 Aug 2011 06:12:55 -0700
 
