add bug number for GLib.timeout_add_seconds() fix

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,7 @@ update-manager (1:0.152.15) UNRELEASEDoneiric; urgency=low
   [ Michael Vogt ]
   * UpdateManager/backend/InstallBackendAptdaemon.py:
     - fix incorrect initialization
-  * fix GLib.timeout_add_seconds() with the new GIR
+  * fix GLib.timeout_add_seconds() with the new GIR (LP: #829186)
 
  -- Brian Murray <brian@ubuntu.com>  Tue, 16 Aug 2011 06:12:55 -0700
 
