call software-properties-gtk without gksu, that is no longer needed

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,8 +8,10 @@ update-manager (1:0.152.15) UNRELEASEDoneiric; urgency=low
   * UpdateManager/backend/InstallBackendAptdaemon.py:
     - fix incorrect initialization
   * fix GLib.timeout_add_seconds() with the new GIR (LP: #829186)
+  * call software-properties-gtk without gksu, that is no longer
+    needed
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 16 Aug 2011 06:12:55 -0700
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 19 Aug 2011 12:14:39 +0200
 
 update-manager (1:0.152.14) oneiric; urgency=low
 
