--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.152.15) UNRELEASEDoneiric; urgency=low
+update-manager (1:0.152.15) oneiric; urgency=low
 
   [ Brian Murray ]
   * DistUpgrade/DistUpgradeApport.py: 
@@ -11,7 +11,7 @@ update-manager (1:0.152.15) UNRELEASEDoneiric; urgency=low
   * call software-properties-gtk without gksu, that is no longer
     needed
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 19 Aug 2011 12:14:39 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 19 Aug 2011 12:15:35 +0200
 
 update-manager (1:0.152.14) oneiric; urgency=low
 
