--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.152.16) oneiric; urgency=low
+
+  * DistUpgrade/DevelReleaseAnnouncement:
+    - prepare text for the beta release
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 25 Aug 2011 17:52:58 +0200
+
 update-manager (1:0.152.15) oneiric; urgency=low
 
   [ Brian Murray ]
