mention bug fixed too

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
 update-manager (1:0.152.17) oneiric; urgency=low
 
   * debian/source-update_manager.py:  ask the reporter if their issue is
-    regarding a distribution upgrade and if yes include log files
+    regarding a distribution upgrade if so include log files (LP: #836846)
 
  -- Brian Murray <brian@ubuntu.com>  Mon, 29 Aug 2011 10:10:15 -0700
 
