* debian/pycompat:   - removed, no longer needed * debian/rules:   - fix incorrect invocation of --with=python2

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 update-manager (1:0.152.18) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
+  * debian/pycompat:
+    - removed, no longer needed
+  * debian/rules:
+    - fix incorrect invocation of --with=python2
+  
   [ Robert Roth ]
   * lp:~evfool/update-manager/handlewarning:
     - Only disconnect handler if it's still connected (LP: #133139)
