--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.152.18) UNRELEASED; urgency=low
+update-manager (1:0.152.18) oneiric; urgency=low
 
   [ Michael Vogt ]
   * debian/pycompat:
@@ -20,7 +20,7 @@ update-manager (1:0.152.18) UNRELEASED; urgency=low
   [ Stefano Rivera ]
   * extras is another special case where validTo=False (LP: #775694)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 12 Sep 2011 10:03:56 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Sep 2011 11:47:10 +0200
 
 update-manager (1:0.152.17) oneiric; urgency=low
 
