--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.152.19) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeCache.py:
+    - do not use O_SYNC for the apt.log, its not important enough
+      to justify the slowdown (LP: #852128)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 21 Sep 2011 17:51:15 +0200
+
 update-manager (1:0.152.18) oneiric; urgency=low
 
   [ Michael Vogt ]
