* DistUpgrade/DistUpgradeQuirks.py:   - increase the default cache size on a multiarch system to     avoid potential crash in natty apt (LP: #854090)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.152.20) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - increase the default cache size on a multiarch system to
+      avoid potential crash in natty apt (LP: #854090)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 27 Sep 2011 15:03:32 +0200
+
 update-manager (1:0.152.19) oneiric; urgency=low
 
   * DistUpgrade/DistUpgradeCache.py:
