* DistUpgrade/DistUpgradeController.py, UpdateManager/Core/utils.py:   - do not leak password from sources.list entries into the logfile     (LP: #839094)

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ update-manager (1:0.152.20) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeQuirks.py:
     - increase the default cache size on a multiarch system to
       avoid potential crash in natty apt (LP: #854090)
+  * DistUpgrade/DistUpgradeController.py, UpdateManager/Core/utils.py:
+    - do not leak password from sources.list entries into the logfile
+      (LP: #839094)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 27 Sep 2011 15:03:32 +0200
 
