* UpdateManager/DistUpgradeFetcher.py:   - fix crash for changed gtk2 -> gtk3 API (LP: #859862)

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ update-manager (1:0.152.20) UNRELEASED; urgency=low
   * UpdateManager/UpdateManager.py:
     - do not crash if a package can not be put into "install" state,
       instead, just keep the old (unmarked) state (LP: #850482)
+  * UpdateManager/DistUpgradeFetcher.py:
+    - fix crash for changed gtk2 -> gtk3 API (LP: #859862)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 27 Sep 2011 15:03:32 +0200
 
