* UpdateManager/backend/InstallBackendAptdaemon.py:   - remove debug output (LP: #855495)

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ update-manager (1:0.152.20) UNRELEASED; urgency=low
       instead, just keep the old (unmarked) state (LP: #850482)
   * UpdateManager/DistUpgradeFetcher.py:
     - fix crash for changed gtk2 -> gtk3 API (LP: #859862)
+  * UpdateManager/backend/InstallBackendAptdaemon.py:
+    - remove debug output (LP: #855495)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 27 Sep 2011 15:03:32 +0200
 
