--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.152.20) UNRELEASED; urgency=low
+update-manager (1:0.152.20) oneiric; urgency=low
 
   * DistUpgrade/DistUpgradeQuirks.py:
     - increase the default cache size on a multiarch system to
@@ -14,7 +14,7 @@ update-manager (1:0.152.20) UNRELEASED; urgency=low
   * UpdateManager/backend/InstallBackendAptdaemon.py:
     - remove debug output (LP: #855495)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 27 Sep 2011 15:03:32 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 30 Sep 2011 16:09:55 +0200
 
 update-manager (1:0.152.19) oneiric; urgency=low
 
