* DistUpgrade/DistUpgradeQuirks.py:   - increase amd64 cache size to 48mb to workaround bug (LP: #854090)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.152.21) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - increase amd64 cache size to 48mb to workaround bug (LP: #854090)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 30 Sep 2011 20:22:34 +0200
+
 update-manager (1:0.152.20) oneiric; urgency=low
 
   * DistUpgrade/DistUpgradeQuirks.py:
