* tests/test_update_origin.py, Janitor/computerjanitor/plugin.py:   - fix tests * .bzr-builddeb/default.conf:   - re-enable pre-build script to ensure we get a updated     base-installer, demotions and html Announcements

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+update-manager (1:0.152.22) oneiric; urgency=low
+
+  * tests/test_update_origin.py, Janitor/computerjanitor/plugin.py:
+    - fix tests
+  * .bzr-builddeb/default.conf:
+    - re-enable pre-build script to ensure we get a updated 
+      base-installer, demotions and html Announcements
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 07 Oct 2011 10:07:26 +0200
+
 update-manager (1:0.152.21) oneiric; urgency=low
 
   * DistUpgrade/DistUpgradeQuirks.py:
