* DistUpgrade/DistUpgrade.cfg:   - ensure that edubuntu-desktop really gets upgraded

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.152.23) oneiric; urgency=low
+
+  * DistUpgrade/DistUpgrade.cfg:
+    - ensure that edubuntu-desktop really gets upgraded
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Sat, 08 Oct 2011 09:43:00 +0200
+
 update-manager (1:0.152.22) oneiric; urgency=low
 
   * tests/test_update_origin.py, Janitor/computerjanitor/plugin.py:
