--- a/debian/changelog
+++ b/debian/changelog
@@ -2,8 +2,10 @@ update-manager (1:0.152.23) oneiric; urgency=low
 
   * DistUpgrade/DistUpgrade.cfg:
     - ensure that edubuntu-desktop really gets upgraded
+  * AutoUpgradeTester/profile/eduubuntu/DistUpgrade.cfg:
+    - update profile for edubuntu
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Sat, 08 Oct 2011 09:43:00 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Sat, 08 Oct 2011 19:24:45 +0200
 
 update-manager (1:0.152.22) oneiric; urgency=low
 
