--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.152.24) oneiric; urgency=low
+
+  * AutoUpgradeTester/profile/eduubuntu/DistUpgrade.cfg:
+    - Fix typo, renaming to edubuntu instead
+
+ -- Stéphane Graber <stgraber@ubuntu.com>  Sat, 08 Oct 2011 15:25:55 -0400
+
 update-manager (1:0.152.23) oneiric; urgency=low
 
   * DistUpgrade/DistUpgrade.cfg:
