* data/gtkbuilder/UpdateManager.ui:   - set default height to 500 (thanks to Sebastien Bacher)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-update-manager (1:0.152.26) UNRELEASED; urgency=low
+yupdate-manager (1:0.152.26) UNRELEASED; urgency=low
 
   * lp:~barcc/update-manager/all_changes-wrong-use:
     - Fixed wrong use of self.cache.all_changes[name] in
       UpdateManager.on_treeview_update_cursor_changed
+  * data/gtkbuilder/UpdateManager.ui:
+    - set default height to 500 (thanks to Sebastien Bacher)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 12 Oct 2011 10:38:21 +0200
 
