* DistUpgrade/DistUpgradeController.py:   - do not crash if apt-btrfs-snapshot fails to run (LP: #873411)

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ yupdate-manager (1:0.152.26) UNRELEASED; urgency=low
       UpdateManager.on_treeview_update_cursor_changed
   * data/gtkbuilder/UpdateManager.ui:
     - set default height to 500 (thanks to Sebastien Bacher)
+  * DistUpgrade/DistUpgradeController.py:
+    - do not crash if apt-btrfs-snapshot fails to run (LP: #873411)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 12 Oct 2011 10:38:21 +0200
 
