* DistUpgrade/DistUpgradeController.py:   - do not crash if apt-btrfs-snapshot fails to run (LP: #873411)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.152.25.1) oneiric-proposed; urgency=low
+
+  * DistUpgrade/DistUpgradeController.py:
+    - do not crash if apt-btrfs-snapshot fails to run (LP: #873411)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 13 Oct 2011 17:29:34 +0200
+
 update-manager (1:0.152.25) oneiric; urgency=low
 
   * DistUpgrade/DistUpgradeController.py:
