--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ yupdate-manager (1:0.152.26) UNRELEASED; urgency=low
     - set default height to 500 (thanks to Sebastien Bacher)
   * DistUpgrade/DistUpgradeController.py:
     - do not crash if apt-btrfs-snapshot fails to run (LP: #873411)
+  * UpdateManager/Core/MyCache.py, DistUpgrade/DistUpgradeCache.py:
+    - honor dselect request install state when calcuating the upgrade
+      thanks to Evan for suggesting this
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 12 Oct 2011 10:38:21 +0200
 
