--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,15 @@
-update-manager (1:0.152.25.2) UNRELEASEDoneiric-proposed; urgency=low
+update-manager (1:0.152.25.3) UNRELEASEDoneiric-proposed; urgency=low
+
+  * DistUpgrade/DistUpgradeCache.py:
+    - fix crash when packages needs downgrading
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 17 Oct 2011 10:25:46 +0200
+
+update-manager (1:0.152.25.2) oneiric-proposed; urgency=low
 
   * refresh translation for the release-upgrader (LP: #873905)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 14 Oct 2011 15:15:46 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 14 Oct 2011 15:19:51 +0200
 
 update-manager (1:0.152.25.1) oneiric-proposed; urgency=low
 
