* UpdateManager/Core/utils.py:   - do not crash if iptables does not exist, thanks to Daniel     Holbach for reporting the issue

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,9 @@ update-manager (1:0.152.25.3) UNRELEASEDoneiric-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeCache.py:
     - fix crash when packages needs downgrading
+  * UpdateManager/Core/utils.py:
+    - do not crash if iptables does not exist, thanks to Daniel
+      Holbach for reporting the issue
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 17 Oct 2011 10:25:46 +0200
 
