* DistUpgrade/DistUpgradeQuirks.py:   - keep poking the screensaver to ensure that it really won't     activate during the upgrade (thanks to Jonathan Davies for     the report)

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,10 @@ update-manager (1:0.152.25.3) UNRELEASEDoneiric-proposed; urgency=low
   * UpdateManager/Core/utils.py:
     - do not crash if iptables does not exist, thanks to Daniel
       Holbach for reporting the issue
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - keep poking the screensaver to ensure that it really won't
+      activate during the upgrade (thanks to Jonathan Davies for
+      the report)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 17 Oct 2011 10:25:46 +0200
 
