* DistUpgrade/removal_blacklist.cfg:   - ensure that postgresql does not get removed (LP: #871893)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.152.25.4) UNRELEASEDoneiric-proposed; urgency=low
+
+  * DistUpgrade/removal_blacklist.cfg:
+    - ensure that postgresql does not get removed (LP: #871893)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 19 Oct 2011 09:52:08 +0200
+
 update-manager (1:0.152.25.3) oneiric-proposed; urgency=low
 
   * DistUpgrade/DistUpgradeCache.py:
