--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.152.25.4) UNRELEASEDoneiric-proposed; urgency=low
+update-manager (1:0.152.25.4) oneiric-proposed; urgency=low
 
   * DistUpgrade/removal_blacklist.cfg:
     - ensure that postgresql does not get removed (LP: #871893)
