--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.153) UNRELEASEDprecise; urgency=low
+update-manager (1:0.154) UNRELEASEDprecise; urgency=low
 
   * lp:~barcc/update-manager/all_changes-wrong-use:
     - Fixed wrong use of self.cache.all_changes[name] in
@@ -11,6 +11,8 @@ update-manager (1:0.153) UNRELEASEDprecise; urgency=low
     - honor dselect request install state when calcuating the upgrade
       thanks to Evan for suggesting this
   * merge fixes from oneiric-proposed
+  * DistUpgrade/*
+    - update for oneiric->precise upgrades
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 19 Oct 2011 16:14:01 +0200
 
