--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.154) UNRELEASEDprecise; urgency=low
+update-manager (1:0.154) precise; urgency=low
 
   * lp:~barcc/update-manager/all_changes-wrong-use:
     - Fixed wrong use of self.cache.all_changes[name] in
@@ -14,7 +14,7 @@ update-manager (1:0.154) UNRELEASEDprecise; urgency=low
   * DistUpgrade/*
     - update for oneiric->precise upgrades
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 19 Oct 2011 16:14:01 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 19 Oct 2011 16:21:16 +0200
 
 update-manager (1:0.152.25.4) oneiric-proposed; urgency=low
 
