* DistUpgrade/DistUpgradeController.py:   - add precise as a LTS release * AutoUpgradeTester/profile/*/DistUpgrade.cfg:   - updated to test oneiric->precise and lucid->precise

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,12 @@ update-manager (1:0.154.1) UNRELEASED; urgency=low
 
   [ Robert Roth ]
   *  Change up-to-date text to up to date (LP: #864336)
+  
+  [ Michael Vogt ]
+  * DistUpgrade/DistUpgradeController.py:
+    - add precise as a LTS release
+  * AutoUpgradeTester/profile/*/DistUpgrade.cfg:
+    - updated to test oneiric->precise and lucid->precise
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 21 Oct 2011 18:18:16 +0200
 
