simplify the auto-upgrade-tester config considerable for the lts->lts tests, add selection of architectures

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,13 @@ update-manager (1:0.154.1) UNRELEASED; urgency=low
     - add precise as a LTS release
   * AutoUpgradeTester/profile/*/DistUpgrade.cfg:
     - updated to test oneiric->precise and lucid->precise
+  * AutoUpgradeTester/UpgradeTestBackendQemu.py:
+    - add support for different architectures
+  * AutoUpgradeTester/profile/server-amd64/DistUpgrade.cfg:
+    - add amd64 server upgrade test profile
+  * DistUpgrade/DistUpgradeConfigParser.py:
+    - add new "defaults_dir" argument to allow simplifying the 
+      auto-upgrade-tester config
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 21 Oct 2011 18:18:16 +0200
 
