--- a/debian/changelog
+++ b/debian/changelog
@@ -15,6 +15,8 @@ update-manager (1:0.154.1) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeConfigParser.py:
     - add new "defaults_dir" argument to allow simplifying the 
       auto-upgrade-tester config
+  * DistUpgrade/DistUpgrade.cfg.lucid:
+    - add lucid->precise upgrade config
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 21 Oct 2011 18:18:16 +0200
 
