* AutoUpgradeTester/UpgradeTestBackendQemu.py:   - dynamically allocate ssh/vnc ports when multiple testers are run

--- a/debian/changelog
+++ b/debian/changelog
@@ -17,6 +17,8 @@ update-manager (1:0.154.1) UNRELEASED; urgency=low
       auto-upgrade-tester config
   * DistUpgrade/DistUpgrade.cfg.lucid:
     - add lucid->precise upgrade config
+  * AutoUpgradeTester/UpgradeTestBackendQemu.py:
+    - dynamically allocate ssh/vnc ports when multiple testers are run
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 21 Oct 2011 18:18:16 +0200
 
