--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.154.1) UNRELEASED; urgency=low
+update-manager (1:0.154.1) precise; urgency=low
 
   [ Robert Roth ]
   *  Change up-to-date text to up to date (LP: #864336)
@@ -20,7 +20,7 @@ update-manager (1:0.154.1) UNRELEASED; urgency=low
   * AutoUpgradeTester/UpgradeTestBackendQemu.py:
     - dynamically allocate ssh/vnc ports when multiple testers are run
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 21 Oct 2011 18:18:16 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 08 Nov 2011 09:35:27 +0100
 
 update-manager (1:0.154) precise; urgency=low
 
