* UpdateManager/backend/InstallBackendSynaptic.py   - fix crash when using synaptic (LP: #878719)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.154.2) unstable; urgency=low
+
+  * UpdateManager/backend/InstallBackendSynaptic.py
+    - fix crash when using synaptic (LP: #878719)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 14 Nov 2011 17:58:33 +0100
+
 update-manager (1:0.154.1) precise; urgency=low
 
   [ Robert Roth ]
