* DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeMain.py:   - before doing the upgrade test if all systemdirs are actually     writable, thanks to Brian Murray (LP: #889921)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,10 @@
-update-manager (1:0.154.2) unstable; urgency=low
+update-manager (1:0.154.2) UNRELEASED; urgency=low
 
   * UpdateManager/backend/InstallBackendSynaptic.py
     - fix crash when using synaptic (LP: #878719)
+  * DistUpgrade/DistUpgradeController.py, DistUpgrade/DistUpgradeMain.py:
+    - before doing the upgrade test if all systemdirs are actually 
+      writable, thanks to Brian Murray (LP: #889921)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 14 Nov 2011 17:58:33 +0100
 
