--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.154.2) UNRELEASED; urgency=low
+update-manager (1:0.154.2) precise; urgency=low
 
   * UpdateManager/backend/InstallBackendSynaptic.py
     - fix crash when using synaptic (LP: #878719)
@@ -6,7 +6,7 @@ update-manager (1:0.154.2) UNRELEASED; urgency=low
     - before doing the upgrade test if all systemdirs are actually 
       writable, thanks to Brian Murray (LP: #889921)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 14 Nov 2011 17:58:33 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 17 Nov 2011 10:15:29 +0100
 
 update-manager (1:0.154.1) precise; urgency=low
 
