--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.154.3) UNRELEASED; urgency=low
+update-manager (1:0.154.3) precise; urgency=low
 
   [ Alexey Feldgendler ]
   * lp:~feldgendler/update-manager/574436:
@@ -9,7 +9,7 @@ update-manager (1:0.154.3) UNRELEASED; urgency=low
     use "from" release name, it's replaced with the "to" release name.
     (LP: #574436)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 21 Nov 2011 14:05:08 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 21 Nov 2011 15:36:02 +0100
 
 update-manager (1:0.154.2) precise; urgency=low
 
