--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.154.4) UNRELEASED; urgency=low
+update-manager (1:0.154.5) precise; urgency=low
 
   [ Nicholas Skaggs ]
   * lp:~nskaggs/update-manager/fix-for-702418:
@@ -27,7 +27,7 @@ update-manager (1:0.154.4) UNRELEASED; urgency=low
     - ensure that the origin headers state of "select all/dselect all"
       is consistent
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 22 Nov 2011 13:30:36 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 29 Nov 2011 09:58:15 +0100
 
 update-manager (1:0.154.3) precise; urgency=low
 
