--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+update-manager (1:0.154.6) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgrade.ui:
+    - remove <child internal-child="selection"> as this is not
+      supported by the gtkbuilder in lucid and makes the release
+      upgrader crash
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Nov 2011 17:39:19 +0100
+
 update-manager (1:0.154.5) precise; urgency=low
 
   [ Nicholas Skaggs ]
