--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-update-manager (1:0.154.6) UNRELEASED; urgency=low
+update-manager (1:0.154.6) precise; urgency=low
 
   * DistUpgrade/DistUpgrade.ui:
     - remove <child internal-child="selection"> as this is not
       supported by the gtkbuilder in lucid and makes the release
-      upgrader crash
+      upgrader crash (LP: #898482)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 30 Nov 2011 17:39:19 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 01 Dec 2011 16:38:56 +0100
 
 update-manager (1:0.154.5) precise; urgency=low
 
