--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-manager (1:0.155.1) precise; urgency=low
+
+  * fix crash in backports fetching code
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 09 Dec 2011 21:34:43 +0100
+
 update-manager (1:0.155) precise; urgency=low
 
   [ Michael Vogt ]
