* debian/source_update-manager.py:   - Use attach_gesttings_package instead of attach_gconf

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,11 @@ update-manager (1:0.155.2) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeController.py:
     - Avoid using systemdir abbreviation (LP: #903939)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 14 Dec 2011 10:02:45 +0100
+  [ Brian Murray ]
+  * debian/source_update-manager.py:
+    - Use attach_gesttings_package instead of attach_gconf
+
+ -- Brian Murray <brian@ubuntu.com>  Thu, 05 Jan 2012 11:45:22 -0800
 
 update-manager (1:0.155.1) precise; urgency=low
 
