--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.155.2) UNRELEASED; urgency=low
+update-manager (1:0.155.2) precise; urgency=low
 
   [ Robert Roth ]
   * DistUpgrade/DistUpgradeController.py:
@@ -12,6 +12,7 @@ update-manager (1:0.155.2) UNRELEASED; urgency=low
   * lp:~jibel/update-manager/AutoUpgradeTester-aptclone:
     - support building a profile from a apt-clone file and testing
       that
+    - add amd64 test profiles
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 06 Jan 2012 11:30:21 +0100
 
