* UpdateManager/UpdateManager.py   - add periods to sentences in refresh_updates_count

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.155.3) UNRELEASED; urgency=low
+
+  * UpdateManager/UpdateManager.py
+    - add periods to sentences in refresh_updates_count
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 06 Jan 2012 09:36:57 -0800
+
 update-manager (1:0.155.2) precise; urgency=low
 
   [ Robert Roth ]
