* DistUpgrade/removal_blacklist.cfg:   - add screen as the server upgrade runs inside it, thanks to     Steve Langasek

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
 update-manager (1:0.155.3) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
+  * DistUpgrade/removal_blacklist.cfg:
+    - add screen as the server upgrade runs inside it, thanks to
+      Steve Langasek
+
+  [ Brian Murray ]
   * UpdateManager/UpdateManager.py
     - add periods to sentences in refresh_updates_count
 
@@ -21,7 +27,7 @@ update-manager (1:0.155.2) precise; urgency=low
       that
     - add amd64 test profiles
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 06 Jan 2012 11:30:21 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 09 Jan 2012 11:30:56 +0100
 
 update-manager (1:0.155.1) precise; urgency=low
 
