--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,10 @@ update-manager (1:0.155.3) UNRELEASED; urgency=low
   * DistUpgrade/removal_blacklist.cfg:
     - add screen as the server upgrade runs inside it, thanks to
       Steve Langasek
+  * DistUpgrade/DistUpgradeController.py, 
+    DistUpgrade/prerequists-sources.list:
+    - use the release-upgrader-python-apt from lucid-updates instead
+      of lucid-proposed
 
   [ Brian Murray ]
   * UpdateManager/UpdateManager.py
