* pyflake fixes, remove some dead code * DistUpgrade/DistUpgradeController.py   - call apport-cli directly for bug reporting of errors

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,15 @@
-update-manager (1:0.155.3) UNRELEASED; urgency=low
+update-manager (1:0.156) UNRELEASED; urgency=low
+
+  [ Michael Vogt ]
+  * pyflake fixes, remove some dead code
+
+  [ Brian Murray ]
+  * DistUpgrade/DistUpgradeController.py
+    - call apport-cli directly for bug reporting of errors
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 10 Jan 2012 11:07:54 +0100
+
+update-manager (1:0.155.3) precise; urgency=low
 
   [ Michael Vogt ]
   * DistUpgrade/removal_blacklist.cfg:
@@ -12,10 +23,8 @@ update-manager (1:0.155.3) UNRELEASED; urgency=low
   [ Brian Murray ]
   * UpdateManager/UpdateManager.py
     - add periods to sentences in refresh_updates_count
-  * DistUpgrade/DistUpgradeController.py
-    - call apport-cli directly for bug reporting of errors
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 06 Jan 2012 09:36:57 -0800
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 10 Jan 2012 10:04:38 +0100
 
 update-manager (1:0.155.2) precise; urgency=low
 
