* check-new-release-gtk   - ensure to write a integer when calculating the next time that     the release available window will be presented (LP: #873424)   - hide redundant release-notes button (LP: #873432)

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,8 +6,12 @@ update-manager (1:0.156) UNRELEASED; urgency=low
   [ Brian Murray ]
   * DistUpgrade/DistUpgradeController.py
     - call apport-cli directly for bug reporting of errors
+  * check-new-release-gtk
+    - ensure to write a integer when calculating the next time that
+      the release available window will be presented (LP: #873424)
+    - hide redundant release-notes button (LP: #873432)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 10 Jan 2012 11:07:54 +0100
+ -- Brian Murray <brian@ubuntu.com>  Thu, 12 Jan 2012 12:37:41 +0100
 
 update-manager (1:0.155.3) precise; urgency=low
 
