update unity dependency

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ update-manager (1:0.156) UNRELEASED; urgency=low
 
   [ Michael Vogt ]
   * pyflake fixes, remove some dead code
+  * update unity dependency
 
   [ Brian Murray ]
   * DistUpgrade/DistUpgradeController.py
@@ -11,7 +12,7 @@ update-manager (1:0.156) UNRELEASED; urgency=low
       the release available window will be presented (LP: #873424)
     - hide redundant release-notes button (LP: #873432)
 
- -- Brian Murray <brian@ubuntu.com>  Thu, 12 Jan 2012 12:37:41 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 13 Jan 2012 11:08:32 +0100
 
 update-manager (1:0.155.3) precise; urgency=low
 
