--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.156) UNRELEASED; urgency=low
+update-manager (1:0.156) precise; urgency=low
 
   [ Michael Vogt ]
   * pyflake fixes, remove some dead code
