debian/source_update-manager.py: include AptDaemon messages from syslog to help identify failures

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.156.1) UNRELEASED; urgency=low
+
+  * debian/source_update-manager.py: include AptDaemon messages from syslog to
+    help identify failures
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 17 Jan 2012 15:21:37 -0800
+
 update-manager (1:0.156) precise; urgency=low
 
   [ Michael Vogt ]
