--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.156.1) UNRELEASED; urgency=low
+update-manager (1:0.156.1) precise; urgency=low
 
   * debian/source_update-manager.py: include AptDaemon messages from syslog to
     help identify failures
