* DistUpgrade/removal_blacklist.cfg:   - add unity, unity-2d

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.156.2) UNRELEASED; urgency=low
+
+  * DistUpgrade/removal_blacklist.cfg:
+    - add unity, unity-2d
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 18 Jan 2012 09:24:13 +0100
+
 update-manager (1:0.156.1) precise; urgency=low
 
   * debian/source_update-manager.py: include AptDaemon messages from syslog to
