debian/source_update-manager.py: use attach_file for dist-upgrade log files rather than attach_root_command_outputs resolving the double gzipped apt clone attachment issue

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,15 @@
 update-manager (1:0.156.2) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * DistUpgrade/removal_blacklist.cfg:
     - add unity, unity-2d
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 18 Jan 2012 09:24:13 +0100
+  [ Brian Murray ]
+  * debian/source_update-manager.py: use attach_file for dist-upgrade log
+    files rather than attach_root_command_outputs resolving the double gzipped
+    apt clone attachment issue
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 24 Jan 2012 16:41:05 -0800
 
 update-manager (1:0.156.1) precise; urgency=low
 
