* UpdateManager/Core/utils.py   - fixed typos in docstring for ExecutionTime

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,11 @@ update-manager (1:0.156.2) UNRELEASED; urgency=low
   * debian/source_update-manager.py: use attach_file for dist-upgrade log
     files rather than attach_root_command_outputs resolving the double gzipped
     apt clone attachment issue
+  
+  [ Matthew Linscott ]
+  * UpdateManager/Core/utils.py
+    - fixed typos in docstring for ExecutionTime 
+
 
  -- Brian Murray <brian@ubuntu.com>  Tue, 24 Jan 2012 16:41:05 -0800
 
