Made usage of 'canceled' v. 'cancelled' consistent. LP: #918302

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-manager (1:0.156.3) precise; urgency=low
+
+  * Made usage of 'canceled' v. 'cancelled' consistent. LP: #918302
+
+ -- Daniel Polehn <dpolehn@gmail.com>  Wed, 25 Jan 2012 14:36:06 -0800
+
 update-manager (1:0.156.2) UNRELEASED; urgency=low
 
   [ Michael Vogt ]
