--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,15 @@
-update-manager (1:0.156.2) UNRELEASED; urgency=low
+update-manager (1:0.156.3) UNRELEASED; urgency=low
+
+  [ Jean-Baptiste Lallement ]
+  * lp:~jibel/update-manager/AutoUpgradeTester-desktoptests:
+    New tests for Ubuntu Desktop LTS upgrade:
+    * autologin check
+    * user settings check: wallpaper, theme, keyboard layout, custom 
+      launchers (desktop and panel)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 27 Jan 2012 09:27:51 -0800
+
+update-manager (1:0.156.2) precise; urgency=low
 
   [ Michael Vogt ]
   * DistUpgrade/removal_blacklist.cfg:
@@ -17,14 +28,7 @@ update-manager (1:0.156.2) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeView.py
     - Made usage of 'canceled' v. 'cancelled' consistent. LP: #918302
 
-  [ Jean-Baptiste Lallement ]
-  * lp:~jibel/update-manager/AutoUpgradeTester-desktoptests:
-    New tests for Ubuntu Desktop LTS upgrade:
-    * autologin check
-    * user settings check: wallpaper, theme, keyboard layout, custom 
-      launchers (desktop and panel)
-  
- -- Brian Murray <brian@ubuntu.com>  Tue, 24 Jan 2012 16:41:05 -0800
+ -- Brian Murray <brian@ubuntu.com>  Wed, 25 Jan 2012 15:37:27 -0800
 
 update-manager (1:0.156.1) precise; urgency=low
 
