Clean up a few pyflakes warnings.

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,9 @@ update-manager (1:0.156.3) UNRELEASED; urgency=low
     * user settings check: wallpaper, theme, keyboard layout, custom 
       launchers (desktop and panel)
 
+  [ Colin Watson ]
+  * Clean up a few pyflakes warnings.
+
  -- Brian Murray <brian@ubuntu.com>  Fri, 27 Jan 2012 09:27:51 -0800
 
 update-manager (1:0.156.2) precise; urgency=low
