--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ update-manager (1:0.156.3) UNRELEASED; urgency=low
 
   [ Colin Watson ]
   * Clean up a few pyflakes warnings.
+  * DistUpgrade/DistUpgradeMain.py
+    - Make sure main.log is actually created.
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 27 Jan 2012 09:27:51 -0800
 
