--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ update-manager (1:0.156.3) UNRELEASED; urgency=low
   * Clean up a few pyflakes warnings.
   * DistUpgrade/DistUpgradeMain.py
     - Make sure main.log is actually created.
+  * DistUpgrade/DistUpgradeCache.py
+    - List broken packages when the upgrade fails.
 
  -- Brian Murray <brian@ubuntu.com>  Fri, 27 Jan 2012 09:27:51 -0800
 
