disable apply_dselect_upgrades()

--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,7 @@ update-manager (1:0.156.3) UNRELEASED; urgency=low
   * tests/test_pyflakes.py:
     - always pyflakes as part of the pre-build process to ensure
       we are clean
+  * disable apply_dselect_upgrades()
   
  -- Brian Murray <brian@ubuntu.com>  Fri, 27 Jan 2012 09:27:51 -0800
 
