* DistUpgrade/removal_blacklist.cfg:   - Only blacklist unity, not all packages whose names start with unity.

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,8 @@ update-manager (1:0.156.3) UNRELEASED; urgency=low
   * Clean up a few pyflakes warnings.
   * DistUpgrade/DistUpgradeMain.py
     - Make sure main.log is actually created.
+  * DistUpgrade/removal_blacklist.cfg:
+    - Only blacklist unity, not all packages whose names start with unity.
   
   [ Robert Roth ]
   * lp:~evfool/update-manager/lp351665:
