--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.156.3) UNRELEASED; urgency=low
+update-manager (1:0.156.3) precise; urgency=low
 
   [ Jean-Baptiste Lallement ]
   * lp:~jibel/update-manager/AutoUpgradeTester-desktoptests:
@@ -33,7 +33,7 @@ update-manager (1:0.156.3) UNRELEASED; urgency=low
       we are clean
   * disable apply_dselect_upgrades()
   
- -- Brian Murray <brian@ubuntu.com>  Fri, 27 Jan 2012 09:27:51 -0800
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 03 Feb 2012 09:56:29 +0100
 
 update-manager (1:0.156.2) precise; urgency=low
 
