--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.156.4) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgrade.cfg.lucid:
+    - Update libapt-pkg and libapt-inst versions.
+
+ -- Colin Watson <cjwatson@ubuntu.com>  Mon, 06 Feb 2012 11:32:28 +0000
+
 update-manager (1:0.156.3) precise; urgency=low
 
   [ Jean-Baptiste Lallement ]
