--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-manager (1:0.156.5) UNRELEASED; urgency=low
+
+  * do-release-upgrade: capitalize U in ubuntu
+
+ -- Brian Murray <brian@ubuntu.com>  Mon, 06 Feb 2012 12:49:57 -0800
+
 update-manager (1:0.156.4) precise; urgency=low
 
   * DistUpgrade/DistUpgrade.cfg.lucid:
