--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
 update-manager (1:0.156.5) UNRELEASED; urgency=low
 
   * do-release-upgrade: capitalize U in ubuntu
+  * debian/source_update-manager.py: add screenlog.0 from
+    /var/log/dist-upgrade to apport bug reports
 
- -- Brian Murray <brian@ubuntu.com>  Mon, 06 Feb 2012 12:49:57 -0800
+ -- Brian Murray <brian@ubuntu.com>  Tue, 07 Feb 2012 08:56:19 -0800
 
 update-manager (1:0.156.4) precise; urgency=low
 
