DistUpgrade/DistUpgradeViewKDE.py: fix regression caused by improper return value handling. (LP: #933225)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,15 @@
 update-manager (1:0.156.5) UNRELEASED; urgency=low
 
+  [ Brian Murray ]
   * do-release-upgrade: capitalize U in ubuntu
   * debian/source_update-manager.py: add screenlog.0 from
     /var/log/dist-upgrade to apport bug reports
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 07 Feb 2012 08:56:19 -0800
+  [ Marc Deslauriers ]
+  * DistUpgrade/DistUpgradeViewKDE.py: fix regression caused by improper
+    return value handling. (LP: #933225)
+
+ -- Marc Deslauriers <marc.deslauriers@ubuntu.com>  Thu, 16 Feb 2012 10:55:45 -0500
 
 update-manager (1:0.156.4) precise; urgency=low
 
