--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.156.5) UNRELEASED; urgency=low
+update-manager (1:0.156.5) precise; urgency=low
 
   [ Brian Murray ]
   * do-release-upgrade: capitalize U in ubuntu
@@ -9,7 +9,7 @@ update-manager (1:0.156.5) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeViewKDE.py: fix regression caused by improper
     return value handling. (LP: #933225)
 
- -- Marc Deslauriers <marc.deslauriers@ubuntu.com>  Thu, 16 Feb 2012 10:55:45 -0500
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 16 Feb 2012 17:22:27 +0100
 
 update-manager (1:0.156.4) precise; urgency=low
 
