--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,12 @@
-update-manager (1:0.156.6) unstable; urgency=low
+update-manager (1:0.156.6) UNRELEASEDprecise; urgency=low
 
   [ Robert Roth ]  
   * lp:~evfool/update-manager/lp930177:
     - Add missing space (LP: #930177) 
+  
+  [ Michael Vogt ]
+  * DistUpgrade/DevelReleaseAnnouncement:
+    - change label from alpha to beta release
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 23 Feb 2012 16:38:17 +0100
 
