--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.156.6) UNRELEASEDprecise; urgency=low
+update-manager (1:0.156.6) precise; urgency=low
 
   [ Robert Roth ]  
   * lp:~evfool/update-manager/lp930177:
@@ -8,7 +8,7 @@ update-manager (1:0.156.6) UNRELEASEDprecise; urgency=low
   * DistUpgrade/DevelReleaseAnnouncement:
     - change label from alpha to beta release
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 23 Feb 2012 16:38:17 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 23 Feb 2012 16:44:50 +0100
 
 update-manager (1:0.156.5) precise; urgency=low
 
