* DistUpgrade/DistUpgradeCache.py:   - fix nvidia detection, thanks to Brian Murray

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.156.7) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeCache.py:
+    - fix nvidia detection, thanks to Brian Murray
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 27 Feb 2012 20:16:32 +0100
+
 update-manager (1:0.156.6) precise; urgency=low
 
   [ Robert Roth ]  
