--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,9 @@ update-manager (1:0.156.7) UNRELEASED; urgency=low
 
   * DistUpgrade/DistUpgradeCache.py:
     - fix nvidia detection, thanks to Brian Murray
-
+  * DistUpgrade/xorg_fix_proprietary.py:
+    - fix crash when apt_pkg is not initialized (LP: #942106)
+  
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 27 Feb 2012 20:16:32 +0100
 
 update-manager (1:0.156.6) precise; urgency=low
