Improve the warning issued when i8xx graphics hardware is detected. (LP: #941172)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-update-manager (1:0.156.7) UNRELEASED; urgency=low
+update-manager (1:0.156.7ubuntu1) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * DistUpgrade/DistUpgradeCache.py:
     - fix nvidia detection, thanks to Brian Murray
   * DistUpgrade/xorg_fix_proprietary.py:
@@ -8,7 +9,11 @@ update-manager (1:0.156.7) UNRELEASED; urgency=low
     - support upgrades with commercial-ppas in the sources.list
       (LP: #939461) and add tests
   
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 27 Feb 2012 20:16:32 +0100
+  [ Barry Warsaw ]
+  * Improve the warning issued when i8xx graphics hardware is
+    detected. (LP: #941172)
+
+ -- Barry Warsaw <barry@ubuntu.com>  Wed, 29 Feb 2012 17:04:24 -0500
 
 update-manager (1:0.156.6) precise; urgency=low
 
