--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
 update-manager (1:0.156.7) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * DistUpgrade/DistUpgradeCache.py:
     - fix nvidia detection, thanks to Brian Murray
   * DistUpgrade/xorg_fix_proprietary.py:
@@ -9,8 +10,13 @@ update-manager (1:0.156.7) UNRELEASED; urgency=low
       (LP: #939461) and add tests
   * UpdateManager/UpdateManager.py:
     - fix inaccurate string, thanks to JohnNapster (LP: #942590)
+
+  [ Brian Murray ]
+  * DistUpgrade/removal_blacklist.cfg: 
+    - Only blacklist unity-2d, not all packages whose names start with
+      unity-2d.  (LP: #940196)
   
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 27 Feb 2012 20:16:32 +0100
+ -- Brian Murray <brian@ubuntu.com>  Fri, 02 Mar 2012 13:09:08 -0800
 
 update-manager (1:0.156.6) precise; urgency=low
 
