* DistUpgrade/DistUpgrade.cfg, DistUpgrade/removal_blacklist.cfg,   UpdateManager/Core/utils.py,   AutoUpgradeTester/profile/lubuntu/DistUpgrade.cfg:  - Add Lubuntu support, and don't upgrade gnome-compoents which have been    removed from Lubuntu installation (LP: #945215)

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,7 +16,14 @@ update-manager (1:0.156.7) UNRELEASED; urgency=low
     - Only blacklist unity-2d, not all packages whose names start with
       unity-2d.  (LP: #940196)
   
- -- Brian Murray <brian@ubuntu.com>  Fri, 02 Mar 2012 13:09:08 -0800
+  [ Julien Lavergne ]
+  * DistUpgrade/DistUpgrade.cfg, DistUpgrade/removal_blacklist.cfg,
+    UpdateManager/Core/utils.py,
+    AutoUpgradeTester/profile/lubuntu/DistUpgrade.cfg:
+   - Add Lubuntu support, and don't upgrade gnome-compoents which have been
+     removed from Lubuntu installation (LP: #945215)
+
+ -- Julien Lavergne <gilir@ubuntu.com>  Sat, 03 Mar 2012 12:45:09 +0100
 
 update-manager (1:0.156.6) precise; urgency=low
 
