--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.156.7) UNRELEASED; urgency=low
+update-manager (1:0.156.7) precise; urgency=low
 
   [ Michael Vogt ]
   * DistUpgrade/DistUpgradeCache.py:
@@ -16,7 +16,7 @@ update-manager (1:0.156.7) UNRELEASED; urgency=low
     - Only blacklist unity-2d, not all packages whose names start with
       unity-2d.  (LP: #940196)
   
- -- Brian Murray <brian@ubuntu.com>  Fri, 02 Mar 2012 13:09:08 -0800
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 05 Mar 2012 09:02:14 +0100
 
 update-manager (1:0.156.6) precise; urgency=low
 
