Only attempt to stop screensaver if DISPLAY set, and throw away xdg-screensaver output. (LP: #883618)

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,10 @@ update-manager (1:0.156.8) UNRELEASED; urgency=low
   * Improve the warning issued when i8xx graphics hardware is
     detected. (LP: #941172)
 
+  [ James Hunt ]
+  * Only attempt to stop screensaver if DISPLAY set, and throw away
+    xdg-screensaver output. (LP: #883618)
+
  -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 05 Mar 2012 09:15:40 +0100
 
 update-manager (1:0.156.7) precise; urgency=low
