* DistUpgrade/removal_blacklist.cfg:   - blacklist gnome-session so that users can always login after a failed     partial upgrade

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,7 +14,12 @@ update-manager (1:0.156.8) UNRELEASED; urgency=low
   * Improve the warning issued when i8xx graphics hardware is
     detected. (LP: #941172)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 05 Mar 2012 09:15:40 +0100
+  [ Brian Murray ]
+  * DistUpgrade/removal_blacklist.cfg: 
+    - blacklist gnome-session so that users can always login after a failed
+      partial upgrade
+
+ -- Brian Murray <brian@ubuntu.com>  Tue, 06 Mar 2012 08:16:30 -0800
 
 update-manager (1:0.156.7) precise; urgency=low
 
