--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,11 @@ update-manager (1:0.156.8) UNRELEASED; urgency=low
   * Only attempt to stop screensaver if DISPLAY set, and throw away
     xdg-screensaver output. (LP: #883618)
 
+  [ Colin Watson ]
+  * Use 'from dbus.mainloop.glib import DBusGMainLoop;
+    DBusGMainLoop(set_as_default=True)' to set up the main loop, rather than
+    importing the deprecated dbus.glib.
+
  -- Brian Murray <brian@ubuntu.com>  Tue, 06 Mar 2012 08:16:30 -0800
 
 update-manager (1:0.156.7) precise; urgency=low
