add in bug number for the bug I fixed

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,7 @@ update-manager (1:0.156.8) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgrade.cfg, DistUpgrade/removal_blacklist.cfg,
     UpdateManager/Core/utils.py,
     AutoUpgradeTester/profile/lubuntu/DistUpgrade.cfg:
-   - Add Lubuntu support, and don't upgrade gnome-compoents which have been
+   - Add Lubuntu support, and don't upgrade gnome-components which have been
      removed from Lubuntu installation (LP: #945215)
 
   [ Barry Warsaw ]
@@ -17,7 +17,7 @@ update-manager (1:0.156.8) UNRELEASED; urgency=low
   [ Brian Murray ]
   * DistUpgrade/removal_blacklist.cfg: 
     - blacklist gnome-session so that users can always login after a failed
-      partial upgrade
+      partial upgrade (LP: #946539)
 
   [ James Hunt ]
   * Only attempt to stop screensaver if DISPLAY set, and throw away
