--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.156.8) UNRELEASED; urgency=low
+update-manager (1:0.156.8) precise; urgency=low
 
   [ Robert Roth ]
   * Update icon name to use FD.o standard (LP: #921310)
@@ -31,7 +31,7 @@ update-manager (1:0.156.8) UNRELEASED; urgency=low
   [ Gabor Kelemen ]
   * Fix misplaced parentheses. LP: #952959
 
- -- Brian Murray <brian@ubuntu.com>  Tue, 06 Mar 2012 08:16:30 -0800
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Mar 2012 15:29:59 +0100
 
 update-manager (1:0.156.7) precise; urgency=low
 
