* DistUpgrade/DistUpgradeController.py:   - support cdrom-only upgrades properly by using the backported     libapt-{pkg,inst} and release-upgrader-python-apt from the CD

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.156.9) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgradeController.py:
+    - support cdrom-only upgrades properly by using the backported
+      libapt-{pkg,inst} and release-upgrader-python-apt from the CD
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Mar 2012 18:01:18 +0100
+
 update-manager (1:0.156.8) precise; urgency=low
 
   [ Robert Roth ]
