--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,15 @@
 update-manager (1:0.156.9) UNRELEASED; urgency=low
 
+  [ Michael Vogt ]
   * DistUpgrade/DistUpgradeController.py:
     - support cdrom-only upgrades properly by using the backported
       libapt-{pkg,inst} and release-upgrader-python-apt from the CD
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Mar 2012 18:01:18 +0100
+  [ Brian Murray ]
+  * debian/source_update-manager.py: pass if attach_gsettings fails like on a
+    server
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 16 Mar 2012 15:36:17 -0700
 
 update-manager (1:0.156.8) precise; urgency=low
 
