* DistUpgrade/DistUpgrade.cfg:   - update KernelRemoval/Version to match oneirics kernel

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,7 +4,9 @@ update-manager (1:0.156.9) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeController.py:
     - support cdrom-only upgrades properly by using the backported
       libapt-{pkg,inst} and release-upgrader-python-apt from the CD
-
+  * DistUpgrade/DistUpgrade.cfg:
+    - update KernelRemoval/Version to match oneirics kernel
+  
   [ Brian Murray ]
   * debian/source_update-manager.py: pass if attach_gsettings fails like on a
     server
